fix .env.dist COMPOSE var

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,5 @@
-COMPOSE_FILE=barcus/docker-compose-alpine-pgsql.yml:docker-compose.yml
+COMPOSE_FILE=barcus/docker-compose-alpine-pgsql.yml:docker-compose-barcus.override.yml
+COMPOSE_PROJECT_NAME=bareos
 
 HOSTNAME=bareos.domain.tld
 NETWORK_PREFIX='192.168.140'
