fix SMTP_ALIASES env var syntax

--- a/.env.dist
+++ b/.env.dist
@@ -18,4 +18,4 @@ SMTP_HOSTNAME=mail.domain.tld
 SMTP_PORT=465
 SMTP_USERNAME=user@domain.tld
 SMTP_PASSWORD=ChangeMe!
-SMTP_ALIAS=mail.domain.tld
+SMTP_ALIASES=mail.domain.tld
