add bareos db name env var

--- a/.env.dist
+++ b/.env.dist
@@ -4,10 +4,11 @@ COMPOSE_PROJECT_NAME=bareos
 HOSTNAME=bareos.domain.tld
 NETWORK_PREFIX='192.168.140'
 
-DB_PASSWORD=ThisIsMySecretDBp4ssw0rd
-DB_USER=bareos
 DB_ADMIN_USER=root
 DB_ADMIN_PASSWORD=ThisIsMySecretDBAdm1np4ssw0rd
+DB_NAME=bareos
+DB_USER=bareos
+DB_PASSWORD=ThisIsMySecretDBp4ssw0rd
 BAREOS_SD_PASSWORD=ThisIsMySecretSDp4ssw0rd
 BAREOS_FD_PASSWORD=ThisIsMySecretFDp4ssw0rd
 BAREOS_WEBUI_PASSWORD=ThisIsMySecretUIp4ssw0rd
