--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,12 @@ jobs:
       uses: actions/checkout@v2
     - name: Lint Markdown
       uses: actionshub/markdownlint@1.2.0
+  check-shell-syntax:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Run Shellcheck
+        uses: azohra/shell-linter@latest
+        with:
+          path: "bin/*.sh"
