Fix newtork config for API

--- a/docker-compose-barcus.override.yml
+++ b/docker-compose-barcus.override.yml
@@ -95,6 +95,10 @@ services:
       traefik.enable: 'true'
       traefik.frontend.rule: "Host:api.${HOSTNAME}"
       traefik.port: '8000'
+    networks:
+      web:
+      default:
+        ipv4_address: "${NETWORK_PREFIX}.9"
 
   smtpd:
     image: ixdotai/smtp
