--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check Docker Compose file syntax
         run: docker-compose --env-file .env.dist config -q
-  check-readme-syntax:
+  check-markdown-syntax:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
