--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check Docker Compose file syntax
         run: docker-compose --env-file .env.dist config -q
-  check-markdown-syntax:
+  check-syntax:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Lint Markdown
-      uses: articulate/actions-markdownlint@v1
-      with:
-        files: '**/*.md'
-  check-shell-syntax:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Lint Markdown
+        uses: articulate/actions-markdownlint@v1
+        with:
+          files: "**/*.md"
       - name: Run Shellcheck
         uses: azohra/shell-linter@latest
         with:
