--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-COMPOSE_FILE=barcus/docker-compose-alpine-pgsql.yml:docker-compose-barcus.override.yml
+COMPOSE_FILE=barcus/compose.yaml:compose.barcus.override.yaml
 COMPOSE_PROJECT_NAME=bareos
 
 HOSTNAME=bareos.domain.tld
