--- a/compose.barcus.override.yaml
+++ b/compose.barcus.override.yaml
@@ -1,47 +1,41 @@
-services:
-  bareos-dir:
-    restart: unless-stopped
-    volumes:
-      - director_config:/etc/bareos
-      - director_data:/var/lib/bareos # required for MyCatalog backup
-    environment:
-      - DB_INIT=true #should be 'true' if bareos db does not exist
-      - DB_UPDATE=false
-      - DB_HOST=bareos-db
-      - DB_PORT=5432
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_ADMIN_USER=${DB_ADMIN_USER} # defined in .env file
-      - DB_ADMIN_PASSWORD=${DB_ADMIN_PASSWORD} # defined in .env file
-      - BAREOS_SD_HOST=bareos-sd
-      - BAREOS_SD_PASSWORD=${BAREOS_SD_PASSWORD} # defined in .env file
-      - BAREOS_FD_HOST=bareos-fd
-      - BAREOS_FD_PASSWORD=${BAREOS_FD_PASSWORD} # defined in .env file
-      - BAREOS_WEBUI_PASSWORD=${BAREOS_WEBUI_PASSWORD} # defined in .env file
-      - SMTP_HOST=smtpd
-      - ADMIN_MAIL=${ADMIN_MAIL} # defined in .env file
-      # Optional you can gets backup notification via Slack or Telegram
-      - WEBHOOK_NOTIFICATION=false # true or false if set to true email notification gets disabled
-      - WEBHOOK_TYPE=slack # choose slack or telegram
-      - WEBHOOK_URL= # set the slack or telegram URL
-      - WEBHOOK_CHAT_ID= # for telegram only set the <chat_id>
-    networks:
-      default:
-        ipv4_address: "${NETWORK_PREFIX}.2"
-    extra_hosts:
-      - "sd1.${HOSTNAME}:${NETWORK_PREFIX}.3"
+networks:
+  default:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: "${NETWORK_PREFIX}.0/20"
+          gateway: "${NETWORK_PREFIX}.1"
+  web:
+    external: true
 
-  bareos-sd:
-    restart: unless-stopped
-    volumes:
-      - storage_config:/etc/bareos
-      - storage_data:/var/lib/bareos/archive
+secrets:
+  smtpd-password:
+    file: ../.secrets/smtpd_password.secret
+  smtpd-user:
+    file: ../.secrets/smtpd_user.secret
+
+services:
+  bareos-api:
+    # Traefik labels are suggested as an example for people using Traefik,
+    # remove them if you are using another reverse proxy.
+    labels:
+      traefik.enable: true
+      traefik.http.routers.bareos-api.entrypoints: websecure
+      traefik.http.routers.bareos-api.rule: "Host(`api.${HOSTNAME}`)"
+      traefik.http.routers.bareos-api.tls.certresolver: myresolver   
+      traefik.http.services.bareos-api.loadbalancer.server.port: 8000
     networks:
+      web:
       default:
-        ipv4_address: "${NETWORK_PREFIX}.3"
+        ipv4_address: "${NETWORK_PREFIX}.9"
+    ports: !reset []
+    restart: unless-stopped
 
   bareos-fd:
+    networks:
+      default:
+        ipv4_address: "${NETWORK_PREFIX}.4"
     restart: unless-stopped
     volumes:
       - client_config:/etc/bareos
@@ -49,16 +43,46 @@ services:
       - director_data:/var/lib/bareos-director:ro # required for MyCatalog backup
       - storage_config:/etc/bareos-storage:ro
       - webui_config:/etc/bareos-webui:ro
+
+  bareos-db:
     networks:
       default:
-        ipv4_address: "${NETWORK_PREFIX}.4"
+        ipv4_address: "${NETWORK_PREFIX}.7"
+    restart: unless-stopped
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+  bareos-dir:
+    environment:
+      ADMIN_MAIL: ${ADMIN_MAIL}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      SMTP_HOST: smtpd
+    extra_hosts:
+      - "sd1.${HOSTNAME}:${NETWORK_PREFIX}.3"
+    networks:
+      default:
+        ipv4_address: "${NETWORK_PREFIX}.2"
+    restart: unless-stopped
+    volumes:
+      - director_config:/etc/bareos
+      - director_data:/var/lib/bareos # required for MyCatalog backup
+
+  bareos-sd:
+    networks:
+      default:
+        ipv4_address: "${NETWORK_PREFIX}.3"
+    restart: unless-stopped
+    volumes:
+      - storage_config:/etc/bareos
+      - storage_data:/var/lib/bareos/archive
 
   bareos-webui:
     restart: unless-stopped
     # Traefik labels are suggested as an example for people using Traefik,
     # remove them if you are using another reverse proxy.
     labels:
-      traefik.enable: 'true'
+      traefik.enable: true
       traefik.http.routers.bareos-webui.entrypoints: websecure
       traefik.http.routers.bareos-webui.rule: "Host(`${HOSTNAME}`)"
       traefik.http.routers.bareos-webui.tls.certresolver: myresolver   
@@ -70,48 +94,17 @@ services:
       web:
       default:
         ipv4_address: "${NETWORK_PREFIX}.5"
+    ports: !reset []
 
   php-fpm:
-    volumes:
-      - webui_config:/etc/bareos-webui
-      - webui_data:/usr/share/bareos-webui
     networks:
       default:
         ipv4_address: "${NETWORK_PREFIX}.6"
-
-  bareos-db:
-    restart: unless-stopped
     volumes:
-      - pg_data:/var/lib/postgresql/data
-    networks:
-      default:
-        ipv4_address: "${NETWORK_PREFIX}.7"
-
-  bareos-api:
-    restart: unless-stopped
-    # Traefik labels are suggested as an example for people using Traefik,
-    # remove them if you are using another reverse proxy.
-    labels:
-      traefik.enable: 'true'
-      traefik.http.routers.bareos-api.entrypoints: websecure
-      traefik.http.routers.bareos-api.rule: "Host(`api.${HOSTNAME}`)"
-      traefik.http.routers.bareos-api.tls.certresolver: myresolver   
-      traefik.http.services.bareos-api.loadbalancer.server.port: 8000
-    networks:
-      web:
-      default:
-        ipv4_address: "${NETWORK_PREFIX}.9"
+      - webui_config:/etc/bareos-webui
+      - webui_data:/usr/share/bareos-webui
 
   smtpd:
-    image: ixdotai/smtp
-    restart: unless-stopped
-    hostname: "smtpd.${HOSTNAME}"
-    volumes:
-      - ../docker-volumes/smtpd/_docker_additional_macros:/etc/exim4/_docker_additional_macros
-      - ../docker-volumes/smtpd/exim4.conf.template:/etc/exim4/exim4.conf.template
-    secrets:
-      - smtpd-user
-      - smtpd-password
     environment:
       RELAY_DOMAINS: ${SMTP_RELAY_DOMAINS}
       SMARTHOST_ADDRESS: ${SMTP_HOSTNAME}
@@ -119,33 +112,25 @@ services:
       SMARTHOST_USER_FILE: '/run/secrets/smtpd-user'
       SMARTHOST_PASSWORD_FILE: '/run/secrets/smtpd-password'
       SMARTHOST_ALIASES: ${SMTP_ALIASES}
+    hostname: "smtpd.${HOSTNAME}"
+    image: ixdotai/smtp
     networks:
       default:
         ipv4_address: "${NETWORK_PREFIX}.8"
-
-networks:
-  web:
-    external: true
-  default:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: "${NETWORK_PREFIX}.0/20"
-          gateway: "${NETWORK_PREFIX}.1"
-
-secrets:
-  smtpd-user:
-    file: ../.secrets/smtpd_user.secret
-  smtpd-password:
-    file: ../.secrets/smtpd_password.secret
+    restart: unless-stopped
+    secrets:
+      - smtpd-user
+      - smtpd-password
+    volumes:
+      - ../docker-volumes/smtpd/_docker_additional_macros:/etc/exim4/_docker_additional_macros
+      - ../docker-volumes/smtpd/exim4.conf.template:/etc/exim4/exim4.conf.template
 
 volumes:
+  client_config:
   director_config:
   director_data:
+  pg_data:
   storage_config:
   storage_data:
-  client_config:
   webui_config:
   webui_data:
-  pg_data:
